SFDCProject/src/objects/Task_Template__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Value10__c</fullName>
        <label>Amount Value10</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blocked_End_Date__c</fullName>
        <label>Blocked End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Blocked_Reason__c</fullName>
        <label>Blocked Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Add Values</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blocked_Start_Date__c</fullName>
        <label>Blocked Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataType1__c</fullName>
        <label>DataType1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataType2__c</fullName>
        <label>DataType2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataType3__c</fullName>
        <label>DataType3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Field10__c</fullName>
        <label>Display Field10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Field11__c</fullName>
        <label>Display Field11</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Field12__c</fullName>
        <label>Display Field12</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Object10__c</fullName>
        <label>Display Object10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Object11__c</fullName>
        <label>Display Object11</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Object12__c</fullName>
        <label>Display Object12</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <label>Expected Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Name10__c</fullName>
        <label>Field Name10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name11__c</fullName>
        <label>Field Name11</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name12__c</fullName>
        <label>Field Name12</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <picklist>
            <picklistValues>
                <fullName>Branch Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brea PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drafting Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTP Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting/Brea PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting/Contract Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting/Design Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planner/Brea PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planner/Contract Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Payment Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Dependent_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Dependent Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name10__c</fullName>
        <label>Object Name10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name11__c</fullName>
        <label>Object Name11</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name12__c</fullName>
        <label>Object Name12</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phase_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phase Template</label>
        <referenceTo>Phase_Template__c</referenceTo>
        <relationshipLabel>Task Templates</relationshipLabel>
        <relationshipName>Task_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Template2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Template2</label>
        <referenceTo>Project_Template__c</referenceTo>
        <relationshipLabel>Task Templates</relationshipLabel>
        <relationshipName>Task_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Template__c</fullName>
        <formula>Phase_Template__r.Project_Template__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Task</label>
        <referenceTo>Task_Template__c</referenceTo>
        <relationshipLabel>Task Templates</relationshipLabel>
        <relationshipName>Task_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLA_In_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SLA (In Hours)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <label>Task Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <label>Task Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Task_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wait_End_Date__c</fullName>
        <label>Wait End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wait_Reason__c</fullName>
        <label>Wait Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Add Values</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wait_Start_Date__c</fullName>
        <label>Wait Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>req10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>req10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>req11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>req11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>req12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>req12</label>
        <type>Checkbox</type>
    </fields>
    <label>Task Template</label>
    <nameField>
        <label>Task Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>